# llm-s2s-classification

./: .gitignore  README.md  accelerate.json  pyproject.toml
src/: train.py
