[project]
name = "llm-s2s-classification"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hppRC", email = "hpp.ricecake@gmail.com" }
]
dependencies = [
    "torch==2.1.0+cu118",
    "tokenizers>=0.14.1",
    "accelerate>=0.23.0",
    "einops>=0.7.0",
    "datasets>=2.14.6",
    "peft>=0.6.0",
    "pip>=23.3",
    "bitsandbytes>=0.41.1",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "sentencepiece>=0.1.99",
    "transformers>=4.35.0",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "trl>=0.7.4",
    "setuptools>=69.0.2",
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"


[tool.hatch.metadata]
allow-direct-references = true


[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "outputs"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
